7901435: Use ProcessBuilders instead of Runtime.exec